--- a/service-c/package.json
+++ b/service-c/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@azure/cosmos": "^4.5.1",
+    "dotenv": "^17.2.2",
     "kafkajs": "^2.2.4"
   }
 }
