--- a/service-d/package.json
+++ b/service-d/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "service-a",
+  "name": "service-d",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,8 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.12.2",
-    "express": "^5.1.0",
-    "kafkajs": "^2.2.4",
-    "prom-client": "^15.1.3"
+    "express": "^5.1.0"
   }
 }
